--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,3 @@
-
 @font-face {
 	font-family: "Gotham Rounded Book";
 	src: url("../font/gotham-rounded-book.otf") format("opentype");
@@ -100,8 +99,23 @@ body {
 }
 
 .features {
-	padding: 10px;
+	position: relative;
+	padding: 10px 10px 40px;
 	background-color: #fff;
+	z-index: -2;
+	overflow: hidden;
+		&:after {
+		content: "";
+		position: absolute;
+		width: 335px;
+		height: 150px;
+		top: 90%;
+		left: 0;
+		z-index: -1;
+		background: $advantages-bg-color 0 0;
+		transform: rotate(-5deg);
+	}
+
 	&__item {
 		font-size: $font-size-x-large;
 		font-weight: $font-weight-light;
@@ -113,9 +127,10 @@ body {
 .advantages {
 	height: 725px;
 	overflow: hidden;
-	padding: 65px 25px 0;
+	padding: 20px 25px 0;
 	text-align: center;
 	background-color: $advantages-bg-color;
+
 	&__item {
 		font-size: $font-size-large;
 		font-weight: $font-weight-regular;
