--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,35 +18,34 @@ $font-weight-light: 300;
 $font-weight-regular: 700;
 $font-weight-bold: 900;
 $line-height-item: 30px;
-$wrapper-width: 320px;
+$wrapper-width: auto;
 $header-height: 460px;
 $margin-center: 0 auto;
 
-
 body {
-	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	font-family: "Open Sans", sans-serif;
 }
 
 .wrapper {
+	min-width: 300px;
+	max-width: 1440px;
 	width: $wrapper-width;
 	margin: $margin-center;
 }
 
 .page-header {
-	height: $header-height;
 	overflow: hidden;
 	color: $font-header-color;
-	background: $header-bg-color url("../img/bg-header.jpg") no-repeat;
+	background: $header-bg-color url("../img/bg-header.jpg") no-repeat 50% 0;
 	&__logo {
 		height: 45px;
-		padding: 10px;
+		padding: 2%;
 		background-color: $top-menu-bg-color;
 	}
 	&__link {
-		padding-left: 5px;
+		padding-left: 2%;
 		font-family: "Gotham Rounded Book", sans-serif;
 		font-size: 32px;
 		line-height: 50px;
@@ -56,25 +55,26 @@ body {
 	&__slogan {
 		width: 250px;
 		margin: $margin-center;
-		padding: 21px;
+		padding: 24px;
 		font-size: $font-size-x-large;
 		font-weight: $font-weight-light;
 		text-align: center;
 	}
-}
-
-.mobile-menu-open__img {
-	float: right;
-	padding: 10px;
+	&__ad {
+		&-img {
+			text-align: center;
+			margin: 0;
+		}
+	}
 }
 
 .mobile-menu {
+	display: none;
 	position: absolute;
-	width: 320px;
+	width: 100%;
 	margin: 0;
 	padding: 0;
 	&__item {
-		display: none;
 		padding: 15px;
 		font-size: $font-size-large;
 		font-weight: $font-weight-bold;
@@ -86,37 +86,46 @@ body {
 		list-style: none;
 		border-bottom: 1px solid $mobile-menu-border-color;
 	}
+	&-open__img {
+		float: right;
+		padding: 1.5%;
+	}
 }
 
 .download-app {
-	height: 220px;
-	padding: 25px;
+	max-height: 215px;
+	padding: 9% 6%;
 	color: $font-header-color;
 	background-color: $header-bg-color;
 	&__mobile {
-		padding: 0 18px;
 		text-align: center;
 	}
 	&__link {
 		display: block;
 		margin: $margin-center;
-		padding: 13px;
+		padding: 13px 0;
+		width: 275px;
 		font-size: $font-size-large;
 		font-weight: $font-weight-regular;
 		color: $font-header-color;
 		text-align: center;
 		text-decoration: none;
-		border: 2px solid $font-header-color;
-		border-radius: 25px;
+		border: 3px solid $font-header-color;
+		border-radius: 30px;
 		&-mobile {
 			display: inline-block;
-			margin: 15px;
+			padding: 0 6%;
 		}
 	}
 	&__info {
+		margin: 0 auto;
+		text-align: center;
+		width: 250px;
 		font-size: $font-size-basic;
 		font-weight: $font-weight-light;
 		text-align: center;
+		padding: 4%;
+		line-height: 1.7;
 	}
 }
 
@@ -124,68 +133,92 @@ body {
 	position: relative;
 	z-index: -2;
 	overflow: hidden;
-	padding: 10px 10px 55px;
+	padding: 12% 5% 26%;
 	background-color: $font-header-color;
 	&:after {
 		position: absolute;
-		top: 90%;
+		top: 82%;
 		left: 0;
 		z-index: -1;
-		width: 335px;
-		height: 150px;
+		width: 230%;
+		height: 10000px;
 		background: $advantages-bg-color 0 0;
 		content: "";
 		transform: rotate(-5deg);
-	}
+		}
 	&__item {
 		font-size: $font-size-x-large;
 		font-weight: $font-weight-light;
 		color: $features-item-color;
 		text-align: center;
+		margin: 0 auto;
+		&:last-child {
+			padding-top: 5%;
+			width: 250px;
+		}
 	}
 }
 
 .advantages {
-	height: 725px;
+	max-height: 725px;
+	height: 100%;
 	overflow: hidden;
-	padding: 20px 25px 0;
+	padding: 3% 3% 0;
 	text-align: center;
 	background-color: $advantages-bg-color;
 	&__item {
 		font-size: $font-size-large;
 		font-weight: $font-weight-regular;
+		width: 300px;
+		margin: 20px auto 10px;
 		&-info {
 			padding-bottom: 5px;
 			font-size: $font-size-basic;
 			font-weight: $font-weight-light;
-			line-height: 1.8em;
+			line-height: 1.8;
+			width: 270px;
+			margin: 0 auto;
 		}
 		&-img {
-			padding-top: 18px;
+			margin-top: 40px;
+			text-align: center;
 		}
 	}
+}
+
+.research {
+	display: none;
 }
 
 .feedback-slider {
 	position: relative;
 	z-index: -2;
-	height: 330px;
+	max-height: 330px;
+	height: 100%;
 	overflow: hidden;
-	padding: 20px;
+	padding: 6%;
+	padding-bottom: 20%;
 	line-height: $line-height-item;
 	text-align: center;
 	background-color: $font-header-color;
 	&__item-person {
 		font-size: $font-size-large;
 		font-weight: $font-weight-regular;
+		&-info {
+			display: none;
+		}
 	}
 	&__item-info {
 		font-size: $font-size-basic;
 		font-weight: $font-weight-light;
+		width: 95%;
+		max-width: 620px;
+		margin: 15px auto;
 	}
 	&__controls {
 		display: block;
 		padding: 10px;
+		margin-bottom: 30px;
 		&-link {
 			margin: 5px;
 		}
@@ -195,27 +228,26 @@ body {
 	}
 	&:after {
 		position: absolute;
-		top: 90%;
+		top: 85%;
 		left: 0;
 		z-index: -1;
-		width: 335px;
-		height: 150px;
+		width: 105%;
+		min-height: 300px;
+		height: 100%;
 		background: $advantages-bg-color 0 0;
 		content: "";
-		transform: rotate(-5deg);
+		transform: rotate(-3deg);
 	}
 }
 
 .buying-options-slider-container {
-	padding: 20px;
-	padding-top: 40px;
+	padding: 9% 6% 1%;
 	background-color: $advantages-bg-color;
 }
 
 .buying-options-slider {
 	text-transform: uppercase;
 	&__item-header {
-		padding-bottom: 50px;
 		background-color: $features-item-color;
 		border-right: 2px solid $buying-options-list-border-color;
 		border-left: 2px solid $buying-options-list-border-color;
@@ -226,24 +258,21 @@ body {
 	&__item-title {
 		display: block;
 		margin: 0;
-		padding-top: 15px;
-		padding-right: 65px;
+		padding: 5% 25% 2%;
 		font-size: $font-size-large;
-		font-weight: 00;
 		line-height: $line-height-item;
 		color: $font-header-color;
 		text-align: center;
 	}
 	&__item-price {
 		display: block;
-		float: right;
-		margin: $margin-center;
-		padding-top: 5px;
-		padding-right: 85px;
+		margin: 0;
+		padding: 0 25% 5%;
 		font-size: $font-size-x-large;
 		font-weight: $font-weight-light;
 		line-height: $line-height-item;
 		color: $font-header-color;
+		text-align: center;
 	}
 	&__item-list {
 		margin: 0;
@@ -285,8 +314,8 @@ body {
 		}
 	}
 	&__controls {
-		padding-top: 35px;
-		padding-bottom: 20px;
+		padding-top: 13%;
+		padding-bottom: 2%;
 		text-align: center;
 
 		@extend .feedback-slider__controls;
@@ -298,52 +327,354 @@ body {
 		}
 	}
 }
+.buying-options-table {
+	display: none;
+}
 
 .page-footer {
-	position: relative;
-	height: 610px;
+	height: 564px;
 	overflow: hidden;
 	text-align: center;
+	margin-top: 35px;
+	&__social {
+		display: none;
+	}
 	&__title {
 		margin: 0;
-		padding-top: 40px;
-		padding-bottom: 20px;
 		font-size: $font-size-x-large;
 		font-weight: $font-weight-light;
 		color: $features-item-color;
+		&:nth-child(2) {
+			margin-bottom: 25px;
+		}
 	}
-	&__heading {
-		margin: 0;
-		padding: 0;
-		font-size: $font-size-large;
-		font-weight: $font-weight-bold;
+	&__item {
+		max-width: 300px;
+		margin: 17px auto;
+		&-heading {
+			margin: 0;
+			padding: 0;
+			font-size: $font-size-large;
+			font-weight: $font-weight-bold;
+		}
+		&-phone,
+		&-address,
+		&-email {
+			margin: 0;
+			padding: 1% 5% 1%;
+			font-size: $font-size-x-large;
+			font-weight: $font-weight-light;
+			color: $footer-font-color;
+		}
+		&-email-link {
+			text-decoration: none;
+			@extend .page-footer__item-phone;
+		}
+		&:nth-child(5) {
+			margin-bottom: 25px;
+		}
 	}
-	&__phone,
-	&__address,
-	&__email {
-		margin: 0;
-		padding: 0 20px 25px;
-		font-size: $font-size-x-large;
-		font-weight: $font-weight-light;
-		color: $footer-font-color;
-	}
-	&__email-link {
-		text-decoration: none;
-
-		@extend .page-footer__phone;
-	}
+	
 	&__map-image {
-		z-index: -2;
+		position: relative;
 		height: 100%;
-		background: url("../img/bg-footer-map.jpg") 0 -445px no-repeat;
+		background: url("../img/bg-footer-map.jpg") 50% -445px no-repeat;
+		text-align: center;
+		&:before {
+			content: "";
+			position: absolute;
+			top: -4%;
+			left: 50%;
+			margin-left: -200px;
+			border: 200px solid transparent;
+			border-top: 40px solid $font-header-color;
+		}
+		&-container {
+			width: 100%;
+			height: 190px;
+			width: auto;
+		}
 	}
-	&:after {
-		position: absolute;
-		bottom: -10px;
-		left: 0;
-		height: 20px;
-		content: "";
-		border: 161px solid transparent;
-		border-top: 35px solid $font-header-color;
+}
+
+@media (min-width: 321px) and (max-width: 699px) {
+	.page-header {
+		background: $header-bg-color url("../img/bg-header-1x.jpg") no-repeat 50% 0;
+	}
+}
+
+@media (min-width: 700px) {
+	.page-header {
+		background: $header-bg-color url("../img/bg-header-2x.jpg") no-repeat 65% -40px;
+		height: 740px;
+		&__logo {
+			height: 40px;
+			padding: 5%;
+			background-color: $top-menu-bg-color;
+		}
+		&__slogan {
+			font-size: 40px;
+			line-height: 1.2;
+			padding: 1%;
+			float: left;
+			margin-left: 70px;
+			margin-top: 90px;
+			width: 210px;
+		}
+		&__ad {
+			&-img {
+				float: right;
+				margin-top: -163px;
+				margin-right: -15px;
+			}
+		}
+	}
+	.download-app {
+		background-color: transparent;
+		width: 310px;
+		margin: 0;
+		padding-left: 4%;
+		float: left;
+		margin-top: -425px;
+		&__link {
+			margin-bottom: 20px;
+		}
+
+		&__info {
+			font-size: 18px;
+			line-height: 24px;
+			width: 100%;
+			margin-top: 20px;
+		}
+	}
+	.features {
+		&__item {
+			font-size: 40px;
+			line-height: 1.1;
+			padding: 0;
+			margin-top: -30px;
+			height: 20px;
+			&:nth-child(2) {
+				width: 350px;
+				margin-top: -20px;
+			}
+		}
+	}
+	.advantages {
+		&-container {
+			width: 300px;
+			margin-left: 310px;
+		}
+		&__item {
+			text-align: left;
+			padding-left: 0;
+			margin-left: 0;
+			width: 100%;
+			&-info {
+				text-align: left;
+				padding-left: 0;
+				margin-left: 0;
+				width: 100%;
+				line-height: 24px;
+			}
+			&-img {
+				z-index: 5;
+				float: left;
+				margin-top: -400px;
+			}
+		}
+	}
+	.research {
+		display: block;
+		&__image {
+			float: left;
+			padding: 5%;
+			margin-top: -55px;
+		}
+		&__info {
+			width: 305px;
+			margin-left: 330px;
+			margin-top: 80px;
+			padding: 2%;
+			&-title {
+				font-size: 30px;
+				line-height: 36px;
+				width: 200px;
+				margin: 0;
+			}
+			&-text {
+				font-size: 14px;
+				line-height: 24px;
+				width: 100%;
+			}
+			&-link {
+				font-size: 14px;
+				line-height: 24px;
+				color: #d22856;
+			}
+		}
+	}
+	.feedback-slider {
+		margin-top: 75px;
+		width: 100%;
+		min-height: 190px;
+		&__item {
+			position: relative;
+			&-person {
+				position: absolute;
+				top: 90px;
+				left: 33%;
+				font-size: 20px;
+				line-height: 30px;
+				&-info {
+					position: absolute;
+					top: 125px;
+					left: 32%;
+					display: block;
+					color: #283645;
+				}
+			}
+			&-info {
+				position: absolute;
+				top: -30px;
+				left: 0;
+				font-size: 18px;
+				line-height: 30px;
+				width: 580px;
+				color: #283645;
+			}
+			&-controls {
+				position: absolute;
+				margin-top: 350px;
+			}
+		}
+	}
+	.buying-options-slider {
+		display: none;
+	}
+	.buying-options-slider-container {
+		height: 280px;
+	}
+	.buying-options-table {
+		display: table;
+		width: 100%;
+		margin: 0 auto;
+		border-collapse: collapse;
+		border-color: $buying-options-list-border-color;
+		border: none;
+		&-head {
+			background-color: $features-item-color;
+			color: white;
+			text-transform: uppercase;
+			padding: 2.5% 6%;
+			&:nth-child(3) {
+				background: $features-item-color url("../img/icon-ribbon-hit.png") -2px -2px no-repeat;
+			}
+			&-title {
+				font-size: 16px;
+				line-height: 30px;
+				margin: 0;
+				font-weight: bold;
+			}
+			&-price {
+				font-weight: 300;
+				font-size: 18px;
+				margin: 0;
+			}
+			&:first-child {
+				background-color: transparent;
+				border-top: none;
+				border: none;
+			}
+		}
+		&-row {
+		}
+		&-cell {
+			padding: 2%;
+			color: $features-item-color;
+			border-color: $buying-options-list-border-color;
+			font-size: 14px;
+			background-color: #fff;
+			&:not(:first-child) {
+				text-align: center;
+				background-color: #fff;
+			}
+			&--on {
+				background: url("../img/icon-yes.png") no-repeat 50% 50%;
+			}
+			&--off {
+				background: url("../img/icon-no.png") no-repeat 50% 50%;
+			}
+		}
+	}
+	.page-footer {
+		height: 990px;
+		&__title {
+			font-weight: 300;
+			font-size: 40px;
+		}
+		&__item {
+			margin-top: -10px;
+			width: 300px;
+			padding: 3%;
+			display: inline-block;
+			&:nth-child(5) {
+				margin-top: -20px;
+			}
+		}
+		&__map-image {
+			z-index: -1;
+			height: 700px;
+			background: url("../img/bg-footer-map-2x.jpg") 50% -375px no-repeat;
+			&:before {
+				content: "";
+				position: absolute;
+				top: -7%;
+				left: -20%;
+				border: 700px solid transparent;
+				border-top: 100px solid $font-header-color;
+			}
+		}
+		&__social {
+			display: block;
+			margin-top: 283px;
+			padding: 5%;
+			height: 60px;
+			background-color: #ddd;
+			&-logo {
+				display: inline-block;
+			}
+			&-icons {
+				display: inline-block;
+				vertical-align: bottom;
+				width: 180px;
+				margin-left: 70px;
+				margin-top: -100px;
+				&-tw {
+					display: inline-block;
+					width: 52px;
+					height: 52px;
+				}
+				&-fb {
+					display: inline-block;
+					width: 52px;
+					height: 52px;
+				}
+				&-yt {
+					display: inline-block;
+					width: 52px;
+					height: 52px;
+				}
+			}
+			&-copyright {
+				display: inline-block;
+				vertical-align: top;
+				margin-left: 50px;
+				margin-top: -15px;
+				&-img {
+					vertical-align: bottom;
+				}
+			}
+		}
 	}
 }
